--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,6 +14,9 @@
     <% include blocks/index/footer %>
     <!-- dev js:assets -->
     <script src="lib/js/a.require.js" data-main="lib/js/main"></script>
+    <!--[if lt IE 9]>
+    <script src="lib/js/html5shiv.js"></script>
+    <![endif]-->
     <script src="static/js/index.js"></script>
     <script src="static/js/base.js"></script>
   </body>
