--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,8 +4,8 @@
     <title><%= title %></title>
     <!-- dev css:assets -->
     <!-- base: normalize,color,hf.css -->
-    <link rel="stylesheet" href="static/css/base.css" />
-    <link rel="stylesheet" href="static/css/index.css" />
+    <link rel="stylesheet" href="static/css/global.less.css" />
+    <link rel="stylesheet" href="static/css/index.less.css" />
   </head>
   <body>
     <h1><%= title %></h1>
@@ -13,11 +13,10 @@
     <% include blocks/index/header %>
     <% include blocks/index/footer %>
     <!-- dev js:assets -->
-    <script src="lib/js/a.require.js" data-main="lib/js/main"></script>
+    <script src="lib/js/require.js" data-main="lib/js/main"></script>
     <!--[if lt IE 9]>
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
     <script src="static/js/index.js"></script>
-    <script src="static/js/base.js"></script>
   </body>
 </html>
