--- a/app/css/global.less
+++ b/app/css/global.less
@@ -2,4 +2,16 @@
 @import "global/color.less";
 
 /* font-family */
-body{font-family:"Microsoft Yahei","微软雅黑",Arial,sans-serif;.b-color}
+body{
+  font:12px/1.5 "Microsoft Yahei","微软雅黑",Arial,sans-serif;
+  .b-color
+}
+
+.warpper{
+  width:960px;
+  margin:0 auto;
+}
+
+.header{
+  font:14px bold;
+}
