--- a/app/views/main/main.ejs
+++ b/app/views/main/main.ejs
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="static/css/main.less.css" />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <% include ../global_blocks/header %>
-    <% include ../global_blocks/footer %>
-    <!-- dev js:assets -->
-    <script src="lib/js/require.js" data-main="lib/js/main"></script>
-    <!--[if lt Imainmain/main
-    <script src="lib/js/html5shiv.js"></script>
-    <![endif]-->
-    <script src="static/js/main.js"></script>
+    <div class="warpper">
+      <h1><%= title %></h1>
+      <p>Welcome to <%= title %></p>
+      <% include ../global_blocks/header %>
+      <% include ../global_blocks/footer %>
+      <!-- dev js:assets -->
+      <script src="lib/js/require.js" data-main="lib/js/main"></script>
+      <!--[if lt Imainmain/main
+      <script src="lib/js/html5shiv.js"></script>
+      <![endif]-->
+      <script src="static/js/main.js"></script>
+    </div>
   </body>
 </html>
