--- a/app/css/global.less
+++ b/app/css/global.less
@@ -1,4 +1,5 @@
 @import "global/reset.less";
+@import "global/clearfix.less";
 @import "global/color.less";
 
 /* font-family */
@@ -7,11 +8,33 @@ body{
   .b-color
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .warpper{
   width:960px;
   margin:0 auto;
 }
 
 .header{
-  font:14px bold;
+  font:14px/1.5 bold;
+  border:1px solid #fff;
+  padding:10px;
+  a{
+    text-decoration:none;
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+  .item{
+    float: left;
+    margin-right: 10px;
+    ul{
+      /*display: none;*/
+    }
+  }
 }
+
