--- a/app/css/global.less
+++ b/app/css/global.less
@@ -18,7 +18,7 @@ body{
   }
 
   .header{
-    font:14px/1.5 bold;
+    font-size:14px;
     border:1px solid #fff;
     padding:10px;
     height: 21px;
