--- a/app/css/global.less
+++ b/app/css/global.less
@@ -6,6 +6,7 @@
 body{
   font:12px/1.5 "Microsoft Yahei","微软雅黑",Arial,sans-serif;
   .b-color;
+
   ul {
     list-style: none;
     margin: 0;
@@ -22,7 +23,6 @@ body{
     border:1px solid #fff;
     padding:10px;
     height: 21px;
-    position:relative;
     a{
       text-decoration:none;
       &:hover{
@@ -32,13 +32,15 @@ body{
     .item{
       float: left;
       margin-right: 20px;
-      ul{
-        display: none;
-        position:absolute;
-        z-index: 1;
-      }
     }
     .more{
+      position: relative;
+      ul{
+        display: none;
+        position: absolute;
+        top:20px;
+        left:0;
+      }
       &:hover{
         ul{display: block;}
       }
