增加合并请求（async）方式

--- a/app/views/main/blocks/daily.ejs
+++ b/app/views/main/blocks/daily.ejs
@@ -1,10 +1,11 @@
 <div class="daily">
   <h3>今日关注</h3>
   <hr />
-  <% articleItems.forEach(function(item){ %>
+  <% dataArray.forEach(function(data){%>
+  <% data.articleItems.forEach(function(item){ %>
   <dl>
     <dt>【<%=: item.title | truncate_:5 %>】<%= item.title %></dt>
   </dl>
   <% }) %>
-
+<% }) %>
 </div>
