--- a/app/views/main/main.ejs
+++ b/app/views/main/main.ejs
@@ -18,6 +18,7 @@
       <% include ../global_blocks/header %>
       <% include ../global_blocks/footer %>
 
+      <img src="static/img/baidu.jpg" alt="" />
       <!-- for requireJS 极致优化 -->
       <script src="lib/js/require.js" data-main="lib/js/main"></script>
       <!-- dev js:assets -->
