--- a/app/css/global.less
+++ b/app/css/global.less
@@ -1,53 +1,16 @@
 @import "global/reset.less";
 @import "global/clearfix.less";
 @import "global/color.less";
+@import "global/header.less";
+@import "global/footer.less";
 
 /* font-family */
 body{
   font:12px/1.5 "Microsoft Yahei","微软雅黑",Arial,sans-serif;
   .b-color;
 
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-
   .warpper{
     width:960px;
     margin:0 auto;
-  }
-
-  .header{
-    font-size:14px;
-    border:1px solid #fff;
-    padding:10px;
-    height: 21px;
-    a{
-      text-decoration:none;
-      &:hover{
-        text-decoration: underline;
-      }
-    }
-    .item{
-      float: left;
-      margin-right: 20px;
-    }
-    .more{
-      position: relative;
-      ul{
-        display: none;
-        position: absolute;
-        top:20px;
-        left:0;
-      }
-      &:hover{
-        ul{display: block;}
-      }
-    }
-  }
-
-  footer{
-    font-size: 20px;
   }
 }
