修改了一下后台返回的数据结构

--- a/app/views/main/blocks/daily.ejs
+++ b/app/views/main/blocks/daily.ejs
@@ -1,7 +1,7 @@
 <div class="daily">
   <h3>今日关注</h3>
   <hr />
-  <% articleItems.forEach(function(item){%>
+  <% dataArray.articleItems.forEach(function(item){%>
     <dl class="clearfix">
       <dt>【<%=: item.title | truncate_:5 %>】</dt>
       <dd><%= item.title %></dd>
