--- a/app/css/global.less
+++ b/app/css/global.less
@@ -7,10 +7,11 @@
 /* font-family */
 body{
   font:12px/1.5 "Microsoft Yahei","微软雅黑",Arial,sans-serif;
-  .b-color;
+  .back-eee;
 
   .warpper{
     width:960px;
     margin:0 auto;
+    /*background: url(/static/img/baidu.jpg) no-repeat;*/
   }
 }
