--- a/app/views/main/main.ejs
+++ b/app/views/main/main.ejs
@@ -4,10 +4,10 @@
     <title><%= title %></title>
     <!-- dev css:assets -->
     <!-- base: normalize,color,hf.css -->
-    <link rel="stylesheet" href="static/css/global.less.css" />
-    <link rel="stylesheet" href="static/css/main.less.css" />
+    <link rel="stylesheet" href="/static/css/global.less.css" />
+    <link rel="stylesheet" href="/static/css/main.less.css" />
     <!-- HTMLshiv for IE -->
-    <!--[if lte IE 9]><script src="lib/js/html5shiv.min.js"></script><![endif]-->
+    <!--[if lte IE 9]><script src="/lib/js/html5shiv.min.js"></script><![endif]-->
     </head>
   <body>
     <div class="warpper">
@@ -18,11 +18,11 @@
       <% include ../global_blocks/header %>
       <% include ../global_blocks/footer %>
 
-      <img src="static/img/baidu.jpg" alt="" />
+      <img src="/static/img/baidu.jpg" alt="" />
       <!-- for requireJS 极致优化 -->
-      <script src="lib/js/require.js" data-main="lib/js/main"></script>
+      <script src="/lib/js/require.js" data-main="/lib/js/main"></script>
       <!-- dev js:assets -->
-      <script src="static/js/main.js"></script>
+      <script src="/static/js/main.js"></script>
     </div>
   </body>
 </html>
