--- a/app/css/global.less
+++ b/app/css/global.less
@@ -1,17 +1,16 @@
-@import "global/reset.less";
-@import "global/clearfix.less";
-@import "global/color.less";
+@import "global/base.less";
 @import "global/header.less";
 @import "global/footer.less";
 
 /* font-family */
 body{
   font:12px/1.5 "Microsoft Yahei","微软雅黑",Arial,sans-serif;
-  .back-eee;
+  background: #f3f3f3;
 
   .warpper{
     width:960px;
+    padding:0 25px;
     margin:0 auto;
-    /*background: url(/static/img/baidu.jpg) no-repeat;*/
+    background:#fff;
   }
 }
