--- a/app/views/main/main.ejs
+++ b/app/views/main/main.ejs
@@ -21,7 +21,7 @@
 
        <% include ../global_blocks/footer %>
       <!-- for requireJS 极致优化 -->
-      <script src="/lib/js/require.js" data-main="/lib/js/main"></script>
+      <script src="/lib/js/require.js" data-main="/lib/js/main.min"></script>
       <!-- dev js:assets -->
       <script src="/static/js/main.js"></script>
     </div>
