--- a/app/css/global.less
+++ b/app/css/global.less
@@ -5,11 +5,11 @@
 /* font-family */
 body{
   font:12px/1.5 "Microsoft Yahei","微软雅黑",Arial,sans-serif;
-  background: #f3f3f3;
+  background: #c1def1;
 
   .warpper{
     width:960px;
-    padding:0 25px;
+    padding:25px 25px;
     margin:0 auto;
     background:#fff;
   }
