--- a/app/views/main/main.ejs
+++ b/app/views/main/main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>111</title>
+    <title><%= title %></title>
     <!-- dev css:assets -->
     <!-- base: normalize,color,hf.css -->
     <link rel="stylesheet" href="/static/css/global.less.css" />
@@ -10,14 +10,11 @@
     <!--[if lte IE 9]><script src="/lib/js/html5shiv.min.js"></script><![endif]-->
     </head>
   <body>
-    <% include ../global_blocks/header %>
     <div class="warpper">
-      <!-- module loader -->
-      <% include ../global_blocks/footer %>
+      <img src="static/img/img.png" style="width:960px"alt="daibi" />
     </div>
-    <!-- for requireJS 极致优化 -->
-    <script src="/lib/js/require.js" data-main="/lib/js/main.min"></script>
-    <!-- dev js:assets -->
-    <script src="/static/js/main.js"></script>
   </body>
+  <script src="/lib/js/jquery.js"></script>
+  <script src="/lib/js/underscore.js"></script>
+  <script src="/static/js/main.js"></script>
 </html>
