--- a/app/views/main/main.ejs
+++ b/app/views/main/main.ejs
@@ -14,7 +14,7 @@
       <img src="static/img/img.png" style="width:960px"alt="daibi" />
     </div>
   </body>
-  <script src="/lib/js/jquery.js"></script>
-  <script src="/lib/js/underscore.js"></script>
+  <script src="/lib/js/jquery.min.js"></script>
+  <script src="/lib/js/underscore.min.js"></script>
   <script src="/static/js/main.js"></script>
 </html>
