--- a/app/css/global.less
+++ b/app/css/global.less
@@ -4,13 +4,13 @@
 
 /* font-family */
 body{
-  font:12px/1.5 "Microsoft Yahei","微软雅黑",Arial,sans-serif;
-  background: #c1def1;
+  font:12px/175%  Arial, 'Microsoft YaHei', Tahoma;
+  background: #1c1229;
 
   .warpper{
     width:960px;
     padding:25px 25px;
-    margin:0 auto;
-    background:#fff;
+    margin:30px auto;
+    background:#ece4f7;
   }
 }
