--- a/app/css/global/base.less
+++ b/app/css/global/base.less
@@ -1,4 +1,5 @@
-@import "mixin/normalize.less";
-@import "mixin/reset.less";
-@import "mixin/clearfix.less";
-@import "mixin/color.less";
+@import "mixin/_normalize.less";
+@import "mixin/_reset.less";
+@import "mixin/_clearfix.less";
+@import "mixin/_color.less";
+
