--- a/app/views/global_blocks/footer.ejs
+++ b/app/views/global_blocks/footer.ejs
@@ -1,17 +1,5 @@
-<hr />
 <footer>
-	<div>
-		<a href=""><img src='' /></a>
-		<ol>
-			<li>主办：百度内部沟通委员会</li>
-			<li>内部沟通委员会成员：Jennifer、王湛、王劲、张东晨、王梦秋、孙云丰、刘辉、向海龙、朱光、徐继业、韩彦</li>
-			<li>协作：ITE、HR、行政部、销售运营部、内部沟通部、财务部、内审部   </li>
-			<li> 协调：内部沟通部   内容主编：张晓晨  编辑：郭伟、李丹、徐淑芝</li>
-		</ol>
-	</div>
-	<p>
-		<a href="">反馈建议</a>
-		<a href="">我要投稿</a>
-		<a href="">举报邮箱</a>
-	</p>
+  <div class="fixed">
+    他妈的footer还没想到写什么
+  </div>
 </footer>
