--- a/app/views/main/main.ejs
+++ b/app/views/main/main.ejs
@@ -13,6 +13,7 @@
     <div class="warpper">
       <img src="static/img/img.png" style="width:960px"alt="daibi" />
     </div>
+    <% include ../global_blocks/footer %>
   </body>
   <script src="/lib/js/jquery.min.js"></script>
   <script src="/lib/js/underscore.min.js"></script>
