--- a/app/css/global.less
+++ b/app/css/global.less
@@ -5,12 +5,19 @@
 /* font-family */
 body{
   font:12px/175%  Arial, 'Microsoft YaHei', Tahoma;
-  background: #1c1229;
+  background: #282a36;
 
+  a{
+    color: #eee;
+    &:hover{
+      text-decoration: underline;
+    }
+  }
   .warpper{
     width:960px;
-    padding:25px 25px;
-    margin:30px auto;
-    background:#ece4f7;
+    padding:15px;
+    margin:10px auto 0;
+    background:#eee;
+    overflow: hidden;
   }
 }
