--- a/app/css/global/footer.less
+++ b/app/css/global/footer.less
@@ -1,13 +1,15 @@
 footer{
   width: 100%;
+  position: fixed;
+  bottom:0;
   .fixed{
     width: 960px;
-    height: 100px;
     margin: 0 auto;
     text-align: center;
-    margin-top: 40px;
+    font-style: 14px;
+    font-weight: bold;
   }
-  background-color: #34224c;
-  border-top:1px solid #4c326f;
+  background-color: #3e4153;
+  border-top:1px solid #535871;
   color: #ece4f7;
 }
