--- a/app/css/global/mixin/_reset.less
+++ b/app/css/global/mixin/_reset.less
@@ -15,3 +15,4 @@ caption, th { text-align: left }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal }
 
 a{ text-decoration: none;}
+img{display: block;}
